cluster/kubernetes-dashboard/manifests/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-headers
  namespace: kubernetes-dashboard
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Host: "dashboard.jonbatista.dev"
      X-Forwarded-Proto: "https"
    customResponseHeaders:
      Content-Security-Policy: "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:"
      X-Content-Type-Options: "nosniff"
      X-Frame-Options: "DENY"
      X-XSS-Protection: "1; mode=block"
    sslRedirect: true
    stsSeconds: 31536000
