cluster/kubernetes-dashboard/manifests/dashboard-api-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-api-lb
  namespace: kubernetes-dashboard
  annotations:
    metallb.universe.tf/address-pool: local-pool
spec:
  selector:
    app.kubernetes.io/name: kubernetes-dashboard-api
  type: LoadBalancer
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
