cluster/kubernetes-dashboard/manifests/dashboard-ingress-api.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-api
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.jonbatista.dev`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: kubernetes-dashboard
          port: 8000
          scheme: http
  tls:
    certResolver: le
    domains:
      - main: dashboard.jonbatista.dev
