cluster/kubernetes-dashboard/manifests/ingressroute-http.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-http-redirect
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dashboard.jonbatista.dev`)
      kind: Rule
      middlewares:
        - name: dashboard-redirect
      services:
        - name: kubernetes-dashboard-web
          port: 443

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-redirect
  namespace: kubernetes-dashboard
spec:
  redirectScheme:
    scheme: https
    permanent: true
